# customer_api_app

./: .gitignore  Dockerfile  async_main.py  docker-compose.yml  main.py  pyproject.toml
config/: logger.py  settings.py
crud/: counts.py  crud.py  customer_crud.py  employee_crud.py  office_crud.py  order_crud.py  orderdetails_crud.py  payment_crud.py  product_crud.py  productline_crud.py
db/: async_database.py  database.py
models/: model.py
router/: counts.py  customer_routes.py  employee_router.py  office_router.py  order_router.py  orderdetail_router.py  payment_router.py  product_router.py  productline_router.py  routes.py
schemas/: count_schema.py  customer_schemas.py  employee_schema.py  office_schemas.py  order_schemas.py  orderdetail_schemas.py  payment_schema.py  product_schemas.py  productline_schemas.py  schema.py
